# Tic-Tak-Toe

./: .gitignore
client/src/: CMakeLists.txt  bitboard.cpp  bitboard.h  client.cpp  client.h  connectiondialog.cpp  connectiondialog.h  connectiondialog.ui  creationdialog.cpp  creationdialog.h  creationdialog.ui  database.cpp  database.h  main.cpp  mainmenu.cpp  mainmenu.h  mainmenu.ui  mainmenut.ui  profile.cpp  profile.h  registrationdialog.cpp  registrationdialog.h  registrationdialog.ui  revengedialog.cpp  revengedialog.h  revengedialog.ui  singupdialog.cpp  singupdialog.h  singupdialog.ui  statdialog.cpp  statdialog.h  statdialog.ui  widget.cpp  widget.h  widget.ui
server/src/: CMakeLists.txt  bitboard.cpp  bitboard.h  database.cpp  database.h  game.cpp  game.h  main.cpp  profile.cpp  profile.h  server.cpp  server.h
server/src/build-server-Desktop_Qt_6_5_1_MinGW_64_bit-Release/: CMakeCache.txt  Makefile  cmake_install.cmake  qtcsettings.cmake
server/src/build-server-Desktop_Qt_6_5_1_MinGW_64_bit-Release/.cmake/api/v1/reply/: cache-v2-581fa44ac98db2116315.json  cmakeFiles-v1-040f11ac803a462ab699.json  codemodel-v2-414456626628e9debcec.json  directory-.-Release-f20fa5edc2243cffae67.json  index-2023-10-26T15-54-07-0245.json  target-server-Release-6a791ac2f83f79a127f2.json  target-server_autogen-Release-eb31259525693537d72d.json
server/src/build-server-Desktop_Qt_6_5_1_MinGW_64_bit-Release/.qt/: QtDeploySupport.cmake
server/src/build-server-Desktop_Qt_6_5_1_MinGW_64_bit-Release/.qtc_clangd/: compile_commands.json
server/src/build-server-Desktop_Qt_6_5_1_MinGW_64_bit-Release/.qtc_clangd/.cache/clangd/index/: _mingw.h.9063BC30453243F3.idx  atomic_base.h.9E887311C28BEF8A.idx  bitboard.cpp.8D2D9868A20BF0B2.idx  bitboard.h.5E01CA3D093B1419.idx  cstddef.6685BE0C46EA418C.idx  database.cpp.7BE9E49A13E0B778.idx  database.h.75F5199AA743F091.idx  game.cpp.3E270712B4B32938.idx  game.h.543C746AD65FD89D.idx  main.cpp.BE9A7DB046050E45.idx  mm_malloc.h.9CB0BD0A0245E687.idx  profile.cpp.AF53E85BE7879D47.idx  profile.h.DA225FD2E0756CB4.idx  qbytearray.h.F5380CA2DD6CB52C.idx  qbytearrayalgorithms.h.770C2421E1730325.idx  qcontiguouscache.h.EC1946193D388F6A.idx  qcoreevent.h.F15A993A9E91CD25.idx  qflags.h.DD1C0FD081EEF471.idx  qmetatype.h.5DCC9B71282DF09A.idx  qobject.h.E8E2319CE31C6CD7.idx  qobjectdefs.h.4EA756D72BB910EE.idx  qobjectdefs.h.BA1D2D6F5BC50ADA.idx  qrandom.h.D5CC26B2370C699D.idx  qstring.h.E4811E7EC9F27268.idx  qtclasshelpermacros.h.FB53779CD7BC8100.idx  qtmetamacros.h.F979BF3902C3AF1F.idx  qtypeinfo.h.CF167BC3A1D39722.idx  qvariant.h.E15A5E5CBABE3B6D.idx  qvarlengtharray.h.EED9D38B745E6ABE.idx  server.cpp.244C386343044EF3.idx  server.h.69508AF09E531FE6.idx  stdarg.h.063916E0B20A50B6.idx  stdbool.h.2A23FD0B923982BB.idx  stdint.h.1F946C5C715873EE.idx  stdint.h.66C08F97530E1A56.idx
server/src/build-server-Desktop_Qt_6_5_1_MinGW_64_bit-Release/server_autogen/: moc_predefs.h
server/src/build-server-Desktop_Qt_6_5_1_MinGW_64_bit-Release/server_autogen/EWIEGA46WW/: moc_database.cpp  moc_database.cpp.d  moc_profile.cpp  moc_profile.cpp.d  moc_server.cpp  moc_server.cpp.d
